--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 .header{
-    background-color: orange;
+    background-color: darkgreen;
     overflow: hidden;
     top: 0; /* Position the navbar at the top of the page */
     width: 100%; /* Full width */
